# boring-noise

./: Cargo.toml
benches/crypto_benches/: blake2s_benching.rs  chacha20poly1305_benching.rs  x25519_public_key_benching.rs  x25519_shared_key_benching.rs
src/: lib.rs
src/noise/: handshake.rs  mod.rs  rate_limiter.rs  session.rs  tls.rs
src/sleepyinstant/: unix.rs
